<resources>
    <string name="app_name">PortfolioApp</string>
    <string name="action_settings">Settings</string>

    <!-- Added by Ankur on Oct 14th, 2015 -->
    <string name="customappname">My App Portfolio</string>
    <string name="welcome">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="xyz">XYZ READER</string>
    <string name="capstone">CAPSTONE MY OWN APP</string>
</resources>
