<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#DDEAF2">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:textColor="#02002A"
        android:layout_marginBottom="40dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:background="#FF8501"
        android:onClick="spotify"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:background="#FF8501"
        android:onClick="scores"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:background="#FF8501"
        android:onClick="library"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/bigger"
        android:background="#FF8501"
        android:onClick="bigger"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:background="#FF8501"
        android:onClick="xyz"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:background="#E10033"
        android:onClick="capstone"
        android:textColor="@android:color/white"
        />

</LinearLayout>
